6-实践篇-java/01-jenkins-springcloud-harbor-gitlab-k8s/springcloud+k8s/jenkins-master/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  selector:
    name: jenkins
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
      nodePort: 30006
    - name: agent
      port: 50000
      targetPort: agent
