6-实践篇-java/01-jenkins-springcloud-harbor-gitlab-k8s/springcloud+k8s/jenkins-master/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
  - host: jenkins.ctnrs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 80
